# protoweld

./: .cratesignore  Cargo.toml  README.md
input/: example.yaml
input/database-server/server/: operations.pb.go  operations_grpc.pb.go
input/entities/protos/database-server/: operations.proto
src/: lib.rs  main.rs
src/algorithm/: hash.rs
src/commands/: init.rs
src/compilers/: dotnet_compiler.rs  go_compiler.rs  mod.rs  protobuf_compiler.rs  rust_compiler.rs  shared.rs  types.rs
src/compilers/langs_compilers/: compiler_types.rs  dotnet_compiler.rs  go_compiler.rs  mod.rs  rust_compiler.rs
src/executor/: mod.rs  protoweld_executor.rs
src/io/: file_writer.rs
src/os/: mod.rs  shared.rs  types.rs  unix_manager.rs
src/parser/: mod.rs  protoweld_parser.rs  types.rs
src/types/: cli.rs  custom_error.rs  init_command.rs  mod.rs
