[package]
name = "protoweld"
version = "0.1.0"
edition = "2021"
authors = ["Sebastian Galindo <sebastian.galindo143@gmail.com>"]
description = "A tool for automating Protocol Buffer compilation across multiple projects and programming languages"
license = "GPL-3.0"
repository = "https://github.com/XACMJudge/protoweld"
homepage = "https://github.com/XACMJudge/protoweld"
documentation = "https://docs.rs/protoweld"
keywords = ["protobuf", "grpc", "code-generation", "compiler"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
include = [
    "LICENSE",
    "README.md",
    "src/**/*",
    "Cargo.toml",
]

[[bin]]
name = "protoweld"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.43", features = ["derive"] }
current_platform = "0.2.0"
env_logger = "0.11.8"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
serde_yaml = "0.9.34"
wait-timeout = "0.2.1"
walkdir = "2.5.0"
